# google-web-apis

./: .gitignore  LICENSE  README.markdown  google-web-apis.cabal
Data/Time/: RFC3339.hs
Network/HTTP/Types/: UglyOrphanInstance.hs
Web/Google/: GCal.hs  HTTP.hs  Maps.hs  Utilities.hs
