Name:                google-web-apis
Version:             0.1
Synopsis:            Google HTTP APIs
Description:         Some simple and useful tidbits to wrap calls to various
                     Google APIs.
License:             BSD3
License-file:        LICENSE
Author:              David Kaloper
Maintainer:          dkaloper@mjesec.ffzg.hr
-- Copyright:           

Category:            Web
Build-type:          Simple

-- Extra-source-files:  
Cabal-version:       >=1.2


Library
  Exposed-modules:     Web.Google.HTTP 
                       Web.Google.Maps 
                       Web.Google.GCal 
                       Data.Time.RFC3339

  Other-modules:       Web.Google.Utilities 
                       Network.HTTP.Types.UglyOrphanInstance
  
  Build-depends:       base == 4.*,
                       time == 1.2.*,
                       bytestring == 0.9.*,
                       enumerator == 0.4.*,
                       transformers == 0.2.*,
                       MonadCatchIO-transformers == 0.2.*,
                       http-types == 0.6.*,
                       http-enumerator == 0.6.*,
                       attoparsec == 0.9.*,
                       attoparsec-enumerator == 0.2.*,
                       aeson == 0.3.*,
                       case-insensitive == 0.2.*,
                       authenticate == 0.9.1.6
  
  ghc-options:         -Wall -funbox-strict-fields -O
  
